# effect-lite

./: .gitignore  Cargo.toml  LICENSE.txt  README.md
effect-lite/: Cargo.toml
effect-lite-executor/: Cargo.toml
effect-lite-executor/examples/: state.rs
effect-lite-executor/src/: constrained.rs  lib.rs  tokio.rs
effect-lite-futures/: Cargo.toml
effect-lite-futures/src/: lib.rs
effect-lite/src/: adapters.rs  either.rs  lib.rs  stream_effect.rs
src/: adapters.rs  async_effect.rs  either.rs  lib.rs  stream_effect.rs
