[package]
name = "effect-light"
version = "0.1.0"
edition = "2024"

[dependencies]
futures = { version = "0.3.32", default-features = false, optional = true }

[dev-dependencies]
futures = { version = "0.3.32", default-features = false, features = ["executor"] }
reqwest = "0.13.2"
tokio = { version = "1.50.0", features = ["rt-multi-thread"] }

[features]
default = []
futures = ["dep:futures"]
std = []
