[package]
name = "effect-lite-executor"
version = "0.1.0"
edition = "2024"

[dependencies]
# Pin to same version as `stalloc` uses. TODO: Update stalloc upstream.
allocator-api2 = "0.3.0"
effect-lite = { version = "0.2.0", path = "../effect-lite", features = ["futures"] }
futures = "0.3.32"
heapless = { version = "0.9.2", features = ["portable-atomic"] }
pin-project = "1.1.11"
smallbox = { version = "0.8.8", default-features = false }
static_cell = "2.1.1"
tokio = { version = "1.51.1", features = ["rt"], optional = true }

[dev-dependencies]
crossterm = { version = "0.29.0", features = ["event-stream"] }
stalloc = { version = "0.7.0", default-features = false, features = ["allocator-api2"] }
tokio = { version = "1.51.1", features = ["rt", "time", "io-util", "io-std", "macros", "rt-multi-thread"] }

[features]
std = []
tokio = ["dep:tokio"]
